--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 POSTGRES_URL: jdbc:postgresql://postgres:5432/catalog-db
 POSTGRES_USER: admin
 POSTGRES_PASSWORD: root
-ELASTIC_URL: http://elasticsearch:9200
+ELASTIC_URL: http://localhost:9200
